add moveLeft() and moveRight() method so the user plane and move left and right beside just moving up and down